deployment/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: igeraweb
  labels:
    app: igeraweb
spec:
  replicas: 2
  revisionHistoryLimit : 5
  template:
    metadata:
      name: igeraweb
      labels:
        app: igeraweb
    spec:
      containers:
      - name: igeraweb
